update api package json scripts

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "outDir": "./build",
+    "target": "es6",
+    "module": "commonjs"
   }
 }
