--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
