refactor api and frontend

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "concurrently": "^9.1.2"
   },
   "scripts": {
-    "dev": "concurrently \"cd frontend && npm run dev\" \"cd api && npm run dev\""
+    "start": "concurrently \"cd frontend && npm start\" \"cd api && npm start\""
   }
 }
