--- a/api/package.json
+++ b/api/package.json
@@ -1,37 +1,15 @@
 {
   "scripts": {
-    "dev": "nodemon --exec ts-node --transpile-only index.ts",
-    "build": "tsc",
-    "start": "node build/index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "google-ads-api": "^19.0.2-rest-beta",
-    "googleapis": "^148.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.14.1",
-    "pg-hstore": "^2.3.4",
-    "selenium-webdriver": "^4.31.0",
-    "sequelize": "^6.37.7",
-    "validator": "^13.15.0",
-    "zod": "^3.24.2"
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.14.0",
-    "@types/selenium-webdriver": "^4.1.28",
-    "@types/validator": "^13.12.3",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "nodemon": "^3.1.9"
   }
 }
