--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,15 @@
 {
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start"
+    "start": "next dev"
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.17.30",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5.8.2"
+    "tailwindcss": "^4"
   }
 }
