--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,7 @@
     "google-ads-api": "^19.0.2-rest-beta",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.9",
     "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   }
 }
