--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
     "start": "next dev"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "next": "15.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.6",
+    "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.7.4",
+    "next": "15.3.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
