--- a/api/package.json
+++ b/api/package.json
@@ -3,13 +3,16 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "google-ads-api": "^19.0.2-rest-beta",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "validator": "^13.15.0",
     "zod": "^3.24.3"
   }
 }
