--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.6",
+    "@hookform/resolvers": "^5.0.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "react-hook-form": "^7.55.0",
+    "tailwindcss": "^3.4.17",
+    "validator": "^13.15.0",
+    "zod": "^3.24.3"
   }
 }
