--- a/api/package.json
+++ b/api/package.json
@@ -1,17 +1,30 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon --exec ts-node --transpile-only index.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.14.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/validator": "^13.15.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "google-ads-api": "^19.0.2-rest-beta",
+    "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "validator": "^13.15.0",
     "zod": "^3.24.3"
   }
