--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "axios": "^1.9.0",
+    "create-uule": "^1.0.3",
+    "mongoose": "^8.14.1",
     "next": "15.3.1",
+    "nodemailer": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4",
