--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
     "dev": "next dev"
   },
   "dependencies": {
+    "@2captcha/captcha-solver": "^1.3.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/selenium-webdriver": "^4.1.22",
     "axios": "^1.9.0",
-    "create-uule": "^1.0.3",
+    "google-ads-api": "^19.0.4-rest-beta",
     "next": "15.3.1",
     "nodemailer": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "selenium-webdriver": "^4.18.1",
     "tailwindcss": "^4",
     "typescript": "^5.8.3"
   }
