update google keyword tool

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,15 @@ GOOGLE_ADS_CUSTOMER_ID=
 GOOGLE_ADS_LOGIN_CUSTOMER_ID=
 
 2CAPTCHA_API_KEY=
+
+POSTGRES_URI=
+
+JWT_SECRET=
+
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=
+
+OPENVPN_USERNAME=
+OPENVPN_PASSWORD=
